.. SPDX-FileCopyrightText: 2024 The IceTray Contributors
..
.. SPDX-License-Identifier: BSD-2-Clause

Release Notes
=============

main
----

Oct. 24, 2024 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.12.0

* IceAct fixes for hdfwriter converter (#3660)
* clean up a small handful of typos
* tableio - use test-specific output filenames (#3539)
* Compile cleanly with -Wall -Werror (#3540)

June 18, 2024 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.11.0

* Ensure that extension modules import cleanly (#3493)
* Run mypy in CI (#3480)
* mypy cleanup for core projects (#3414)
* Branch restructuring iceact dataclasses and adding tableio converter for iceact classes (#2987)
* Add stubs for even more pybindings (#3413)
* tableio - clean up typos (#3446)
* [tableio] Add SPDX tags (#3437)

Feb. 20, 2024 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.9.2

* Delete mailinglist files (#3357)
* Add upgrade rules to ruff (#3316)
* Remove all tab characters used for indentation from python files (#3300)

Dec. 14, 2023 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.9.0

* Remove Uber Header (I3.h) (#3151)
* Fix E731 lambda-assignment (#3271)
* general python cleanups (ruff/E713) (#3269)
* fix E703 useless-semicolon (#3266)
* general python cleanups (ruff/B018) (#3264)
* fix B028 no-explicit-stacklevel (#3265)
* fix E714 not-is-test (#3270)
* fix E711 none-comparison (#3267)
* python ruff cleanup fix EXE001 (#3289)
* Fix a number of issues identified by ruff (#3262)
* Fix up duplicate keys in tableio int test
* Make composed tableio converters actually work (#3255)
* Treat deserialization failures as hard errors for requested keys (#3256)
* Check whether I3TableWriter is the driving module
