@@ -11,8 +11,13 @@ Ensure that I3MCTree and I3LinearizedMCTree can both be written
 import os
 import unittest
 
-from icecube import phys_services  # noqa: F401
-from icecube import dataclasses, icetray
+import h5py
+from icecube import (
+    dataclasses,
+    icetray,
+    phys_services,  # noqa: F401
+)
+from icecube.hdfwriter import I3HDFWriter
 from icecube.icetray import I3Tray
 
 icetray.logging.set_level_for_unit("I3Tray", "WARN")
@@ -38,16 +43,11 @@ def make_mctree(frame, linearized=True):
 def try_to_write(file=os.path.basename(__file__)+".hdf5",
                  linearized=False):
 
-    try:
-        from icecube.hdfwriter import I3HDFWriter
-    except ImportError:
-        raise unittest.SkipTest("hdfwriter project missing")
-
     tray = I3Tray()
 
     tray.Add('I3InfiniteSource')
     tray.Add(add_eventheader, Streams=[icetray.I3Frame.DAQ])
-    tray.Add("I3NullSplitter", "nullsplit")
+    tray.Add("I3NullSplitter", "nullsplit", SubEventStreamName="nullsplit")
 
     tray.Add(make_mctree, linearized=linearized)
     tray.Add(I3HDFWriter,
@@ -63,38 +63,20 @@ def try_to_write(file=os.path.basename(__file__)+".hdf5",
 class MCTreeTest(unittest.TestCase):
     test_output = os.path.basename(__file__) + ".hdf5"
     def setUp(self):
-        try:
-            import h5py
-        except ImportError:
-            raise unittest.SkipTest("h5py missing")
-
-        if 'File' not in dir(h5py):
-            raise unittest.SkipTest("h5py missing or incomplete")
-
         try_to_write()
     def tearDown(self):
         os.unlink(self.test_output)
     def testNumberOfRows(self):
-        import h5py
         with h5py.File(self.test_output,'r') as hdf:
             self.assertIsNotNone(hdf['/I3MCTree'], "I3MCTree table exists")
             self.assertEqual(len(hdf['/I3MCTree']), 2, "I3MCTree table has 2 rows")
 
 class LinearizedMCTreeTest(MCTreeTest):
     def setUp(self):
-        try:
-            import h5py
-        except ImportError:
-            raise unittest.SkipTest("pytables missing")
-
-        if 'File' not in dir(h5py):
-            raise unittest.SkipTest("pytables missing or incomplete")
-
         try_to_write(linearized=True)
     def tearDown(self):
         os.unlink(self.test_output)
     def testNumberOfRows(self):
-        import h5py
         with h5py.File(self.test_output,'r') as hdf:
             self.assertIsNotNone(hdf['/I3MCTree'], "I3MCTree table exists")
             self.assertEqual(len(hdf['/I3MCTree']), 2, "I3MCTree table has 2 rows")
